force-app/main/default/objects/cgcloud__Tactic__c/cgcloud__Tactic__c.object-meta.xml
<CustomObject>
    <description>Relation from a Promotion and Tactic.</description>
    <label>Tactic</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Tactic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>