force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Absolute_Lift__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Absolute_Lift__c</fullName>
    <label>Absolute Lift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>