force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor__c</fullName>
    <formula>cgcloud__Promotion__r.cgcloud__Anchor_Account__r.Name</formula>
    <label>Anchor</label>
    <type>Text</type>
</CustomField>