force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Comment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Comment__c</fullName>
    <description>Short Comment to describe the tactic</description>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>