force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Condition_Creation_Incidents__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Creation_Incidents__c</fullName>
    <description>This field holds information about duplicate condition incidents.</description>
    <label>Condition Creation Incidents</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>