force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Condition_Creation_Levels__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Creation_Levels__c</fullName>
    <description>JSON with list of effective product levels.</description>
    <label>Condition Creation Levels</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>