force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Condition_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Maintenance__c</fullName>
    <description>Defines what should happen to conditions generated out of this tactic</description>
    <label>Condition Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>initial</fullName>
                <default>true</default>
                <label>initial</label>
            </value>
            <value>
                <fullName>upsert</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>freeze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>