force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Create_Default_Conditions__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Create_Default_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates when the system needs to create the default tactic condition creation definitions for the tactics when this tactic is saved in the database.</description>
    <label>Create Default Conditions</label>
    <type>Checkbox</type>
</CustomField>