force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of the tactic that is used as reference in external systems. This id will be used by integration to import tactic specific actuals into the offplatform backend.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>