force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>