force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund Type of the funds that are automatically assigned to the tactic.</description>
    <label>Fund Template</label>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>Tactics</relationshipLabel>
    <relationshipName>Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>