force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Included__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Included__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if a tactic is included in a promotion</description>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>