force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Instore_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Instore_Date_From__c</fullName>
    <description>Instore start date of a tactic</description>
    <label>In-Store Date From</label>
    <type>Date</type>
</CustomField>