force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Instore_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Instore_Date_Thru__c</fullName>
    <description>Instore end date of a tactic</description>
    <label>In-Store Date Thru</label>
    <type>Date</type>
</CustomField>