force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__KPI_Value_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Value_1__c</fullName>
    <description>Writeback Synchronized KPI 1</description>
    <label>KPI Value 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>