force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__KPI_Value_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Value_2__c</fullName>
    <description>Writeback Synchronized KPI 2</description>
    <label>KPI Value 2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>