force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__LE_Spend__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Spend__c</fullName>
    <description>LE Spend KPI value to be distributed to the associated Tactic Funds based on the Funding percentage.</description>
    <label>LE Spend</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>