force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Liabilities__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Liabilities__c</fullName>
    <description>Liability Accrual KPI value to be distributed to the associated Tactic Funds based on the Funding percentage.</description>
    <label>Liabilities</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>