force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Lift__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Lift__c</fullName>
    <label>Lift</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>