force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Lift_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Lift_Type__c</fullName>
    <label>Lift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abs</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>