force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Lift_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Lift_Value__c</fullName>
    <label>Lift Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>