force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__OI_Costs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__OI_Costs__c</fullName>
    <description>OI Costs KPI value to be distributed to the associated Tactic Funds based on the Funding percentage.</description>
    <label>OI Costs</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>