force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Parent_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the tactic in the parent promotion that caused the creation of this tactic</description>
    <label>Parent Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Child Tactics</relationshipLabel>
    <relationshipName>ChildTactics</relationshipName>
    <type>Lookup</type>
</CustomField>