force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Method__c</fullName>
    <description>Which payment method should be used for a tactic</description>
    <label>Claim Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deduction</fullName>
                <default>true</default>
                <label>Deduction</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>OnInvoice</fullName>
            </value>
            <value>
                <fullName>OffInvoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>