force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Pct_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pct_of_Stores__c</fullName>
    <defaultValue>1</defaultValue>
    <label>% of Stores</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>