force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pending_Amount__c</fullName>
    <label>Pending Claim</label>
    <summarizedField>cgcloud__Payment_Tactic__c.cgcloud__Tactic_Payout__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Payment_Tactic__c.cgcloud__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cgcloud__Payment_Tactic__c.cgcloud__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cgcloud__Payment_Tactic__c.cgcloud__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Adjusted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cgcloud__Payment_Tactic__c.cgcloud__Adjustment_Type__c</field>
        <operation>notEqual</operation>
        <value>Payment Reversal</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Payment_Tactic__c.cgcloud__Tactic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>