force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Plan_Spend__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Plan_Spend__c</fullName>
    <label>Plan Spend</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>