force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <description>Reference to the promotion</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Tactics</relationshipLabel>
    <relationshipName>Tactics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>