force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Promotion_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Description__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; cgcloud__Promotion__r.Id &amp; &quot;/view&quot;, cgcloud__Promotion__r.cgcloud__Slogan__c)</formula>
    <label>Slogan</label>
    <type>Text</type>
</CustomField>