force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Promotion_Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Phase__c</fullName>
    <formula>TEXT(cgcloud__Promotion__r.cgcloud__Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Phase</label>
    <type>Text</type>
</CustomField>