force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Scenario_Participation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scenario_Participation__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Bitlist defining the scenario participation (only the first 5 bits are used).</description>
    <label>Scenario Participation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>