force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Shipment_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Shipment_Date_From__c</fullName>
    <description>Shipment start date of a tactic</description>
    <label>Shipment Date From</label>
    <type>Date</type>
</CustomField>