force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Shipment_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Shipment_Date_Thru__c</fullName>
    <description>Shipment end date of a tactic</description>
    <label>Shipment Date Thru</label>
    <type>Date</type>
</CustomField>