force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Source_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Source Tactic</relationshipLabel>
    <relationshipName>Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>