force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the tactic template</description>
    <label>Tactic Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tactic template does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>cgcloud__Tactic_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Tactic_Template__c</referenceTo>
    <relationshipLabel>Tactics</relationshipLabel>
    <relationshipName>Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>