force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Tactic_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Type__c</fullName>
    <formula>cgcloud__Tactic_Template__r.cgcloud__Description__c</formula>
    <label>Tactic Type</label>
    <type>Text</type>
</CustomField>