force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Tier_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tier_Definition__c</fullName>
    <description>Json structure which contains the tiers for the tactic.</description>
    <label>Tier Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>