force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Total_Plan_Spend__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Plan_Spend__c</fullName>
    <description>Sum of all Plan Spends of Funds</description>
    <label>Total Plan Spend</label>
    <summarizedField>cgcloud__Tactic_Fund__c.cgcloud__Plan_Spend__c</summarizedField>
    <summaryForeignKey>cgcloud__Tactic_Fund__c.cgcloud__Tactic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>