force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__TPO_Discount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TPO_Discount__c</fullName>
    <description>Stores discount used for Uplift Prediction.</description>
    <inlineHelpText>Stores discount used for Uplift Prediction.</inlineHelpText>
    <label>TPO Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>