force-app/main/default/objects/cgcloud__Tactic__c/recordTypes/cgcloud__DisplayPerAbs.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__DisplayPerAbs</fullName>
    <active>true</active>
    <label>Display PerAbs</label>
</RecordType>