force-app/main/default/objects/cgcloud__Tactic__c/recordTypes/cgcloud__PriceReduction.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__PriceReduction</fullName>
    <active>true</active>
    <label>Price Reduction</label>
</RecordType>