force-app/main/default/objects/cgcloud__Tactic__c/recordTypes/cgcloud__PriceReductionPerAbs.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__PriceReductionPerAbs</fullName>
    <active>true</active>
    <label>Price Reduction PerAbs</label>
</RecordType>