force-app/main/default/objects/cgcloud__Tactic__c/validationRules/cgcloud__Avoid_Change_Promo_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_Promo_Parent</fullName>
    <active>true</active>
    <description>Prevents a user from changing the tactic&apos;s promotion.</description>
    <errorConditionFormula>cgcloud__Promotion__c != PRIORVALUE(cgcloud__Promotion__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Promotion__c</errorDisplayField>
    <errorMessage>You can&apos;t change the promotion of the tactic.</errorMessage>
</ValidationRule>