force-app/main/default/objects/cgcloud__Tactic__c/validationRules/cgcloud__date_from_less_or_equal_date_thru.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__date_from_less_or_equal_date_thru</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Date_From__c  &gt;   cgcloud__Date_Thru__c</errorConditionFormula>
    <errorDisplayField>cgcloud__Date_From__c</errorDisplayField>
    <errorMessage>Date From can&apos;t be later than Date Thru.</errorMessage>
</ValidationRule>