force-app/main/default/objects/cgcloud__Tactic__c/validationRules/cgcloud__Prevent_Tactic_Template_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Tactic_Template_Change</fullName>
    <active>true</active>
    <description>The Tactic Template can&apos;t be edited after Tactic creation.</description>
    <errorConditionFormula>ISCHANGED( cgcloud__Tactic_Template__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Tactic_Template__c</errorDisplayField>
    <errorMessage>The Tactic Template can&apos;t be edited after Tactic creation.</errorMessage>
</ValidationRule>