force-app/main/default/objects/cgcloud__Tactic__c/validationRules/cgcloud__Tactic_DateRange_In_Promotion_DateRange.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Tactic_DateRange_In_Promotion_DateRange</fullName>
    <active>true</active>
    <description>Tactic DateFrom,DateThru must be within Promotion DateFrom,DateThru.</description>
    <errorConditionFormula>AND(
            OR(
                (cgcloud__Date_From__c &lt; cgcloud__Promotion__r.cgcloud__Date_From__c),
                (cgcloud__Date_Thru__c &gt; cgcloud__Promotion__r.cgcloud__Date_Thru__c),
                (cgcloud__Instore_Date_From__c &lt; cgcloud__Promotion__r.cgcloud__Date_From__c),
                (cgcloud__Instore_Date_Thru__c &gt; cgcloud__Promotion__r.cgcloud__Date_Thru__c),
                (cgcloud__Shipment_Date_From__c &lt; cgcloud__Promotion__r.cgcloud__Date_From__c),
                (cgcloud__Shipment_Date_Thru__c &gt; cgcloud__Promotion__r.cgcloud__Date_Thru__c)
            ),
            cgcloud__Promotion__r.RecordType.DeveloperName = &apos;Promotion&apos;
        )</errorConditionFormula>
    <errorMessage>The Tactic time frame must be within the Promotion time frame.</errorMessage>
</ValidationRule>